bug fixes to remove PMD issues.